[project]
name = "physmodpo"
version = "0.1.0"
description = "PhysMoDPO: Physically-Plausible Humanoid Motion with Preference Optimization"
requires-python = ">=3.12"
dependencies = [
    # Numerical / data
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "pandas>=2.0",
    "tqdm>=4.66",
    "einops>=0.7",
    "pillow>=10.0",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "moviepy>=1.0.3",
    # Vision & geometry
    "opencv-contrib-python-headless>=4.8",
    "trimesh>=4.0",
    "smplx>=0.1.28",
    "chumpy>=0.70",
    "pyrender>=0.1.45",
    # pyopengl version controlled by pyrender (pins ==3.1.0)
    # open3d: aarch64 wheels may not exist; fallback to trimesh+pyrender if build fails
    "open3d>=0.18.0",
    "pyquaternion>=0.9.9",
    # NLP / motion text
    "spacy>=3.7",
    "lightning>=2.1",
    "transformers>=4.38",
    "sentence-transformers>=2.6",
    "tokenizers>=0.15",
    "huggingface-hub>=0.20",
    # CLIP (no PyPI release — install from git)
    "clip @ git+https://github.com/openai/CLIP.git",
    # Config / logging
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "configargparse>=1.7",
    "wandb>=0.16",
    # UI
    "gradio>=4.20",
    "plotly>=5.18",
    # Utilities
    "gdown>=5.0",
    "ftfy>=6.1",
    "regex>=2023.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.11",
]

[dependency-groups]
# torch/torchvision/torchaudio are provided by nvcr.io/nvidia/pytorch:25.08-py3.
# They are listed here so transitive deps resolve correctly during lock generation.
# In the NGC container use: uv sync --frozen --no-group ngc-provided --system
ngc-provided = [
    "torch>=2.8",
    "torchvision>=0.23",
    "torchaudio>=2.8",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["OmniControl"]
